--- a/jQuery/css/select.css
+++ b/jQuery/css/select.css
@@ -92,7 +92,7 @@ div{
 	padding: 0;
 	height: auto;
 	width: auto;
-	background-color: beige;
+	background-color: #eeeeee;
 	border-radius: 10px;
 }
 .goodsName{
