--- a/jQuery/css/checkOut.css
+++ b/jQuery/css/checkOut.css
@@ -16,14 +16,13 @@ body{
 
 table{
 	text-align: center;
-	border:1px solid black;
 }
 tr{
-	border:1px solid black;
+	border:1px solid pink;
 }
 td{
 	height: 100px;
-	border:1px solid black;
+	border:1px solid pink;
 }
 td img{
 	position: absolute;
@@ -63,6 +62,7 @@ td img{
 #foot{
 	background-color: pink;
 	border-radius: 10px;
+	margin-bottom: 30px;
 }
 .foot_right{
 	text-align: center;
