--- a/小米官网/css/div_float.css
+++ b/小米官网/css/div_float.css
@@ -142,6 +142,12 @@ a {
 	background-color:transparent;
 	height: auto;
 }
+.contain300{
+	width: 300px;
+	float:left;
+	background-color:transparent;
+	height: auto;
+}
 .contain240{
 	width: 240px;
 	float:left;
