--- a/小米官网/css/January.css
+++ b/小米官网/css/January.css
@@ -1,6 +1,3 @@
-div{
-	background-color: red;
-}
 
 .containAll .center{
 	margin-left: auto;
@@ -201,8 +198,37 @@ div{
 	background: hsla(0,0%,100%,0.4) !important;
 }
 
-#navi .navi_body{
+#navi .box320{
 	height: 170px;
+}
+#navi .contain240{
+	width: 220px;
+	margin: 10px 10px 0 10px;
+	background-color: #60574f;
+}
+#navi .navi_body .box80{
+	border-right: 1px solid #666666;
+	border-bottom: 1px solid #666666;
+	background-color: transparent;
+	text-align: center;
+	height: 85px;
+	width: 72px;
+	margin: 0;
+	color: white;
+	opacity: 0.7;
+}
+#navi .navi_body .box80 img{
+	margin-top: 18px;
+	height: 24px;
+	width: 24px;
+}
+#navi .navi_body .box80 div{
+	background-color: transparent;
+	font-size: 12px;
+}
+#navi .navi_body .box80:hover{
+	cursor: pointer;
+	opacity: 1;
 }
 
 /* body */
